[feat] #4 AIResult 날짜 타입별 응답 구조 정리